# httpx-pydantic

./: main.py  pyproject.toml
